change final sentacne font size

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 </div>
             </div>
 
-            <div style="margin-top: 1rem;">And using all these things to help you better understand the doctrines and revelations revealed to us by God.</div>
+            <div style="margin-top: 1rem; font-size: 36px;">And using all these things to help you better understand the doctrines and revelations revealed to us by God.</div>
         </section>
 
     </main>
