actually fixed font size

--- a/index.html
+++ b/index.html
@@ -41,7 +41,9 @@
                 </div>
             </div>
 
-            <div style="margin-top: 1rem; font-size: 36px;">And using all these things to help you better understand the doctrines and revelations revealed to us by God.</div>
+            <div style="margin-top: 1rem;">
+                <p style="font-size: 36px;">And using all these things to help you better understand the doctrines and revelations revealed to us by God.</p>
+            </div>
         </section>
 
     </main>
