--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
     </main>
     <footer>
-        <p>&copy; 2025 Matthew Clifford</p>
+        <p>&copy; 2025 Matthew Clifford  -  REL275C  -  Teachings of the Book of Mormon</p>
     </footer>
 </body>
 </html>
