text size again

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 </div>
             </div>
             <hr>
-            <p style="font-size: 30px;">And using all these things to help you better understand the doctrines and revelations revealed to us by God.</p>
+            <p style="font-size: 30px !important;">And using all these things to help you better understand the doctrines and revelations revealed to us by God.</p>
         </section>
 
     </main>
