--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 <div class="content-pair">
                     <img src="https://www.churchofjesuschrist.org/imgs/07225f56fb8411eb80e5eeeeac1e3718470f294f/full/!1280%2C826/0/default" alt="Praying" class="content-image">
                     <div class="text-box">
-                        <p>And your own personal revelations</p>
+                        <p>And your own personal revelations and experiences</p>
                     </div>
                 </div>
             </div>
