--- a/putting_it_all_together1.html
+++ b/putting_it_all_together1.html
@@ -19,12 +19,12 @@
     <main>
         <section id="about">
             <h2 id="title">Understanding the Atonement of Jesus Christ</h2>
-            <p style="font-size: 24px;">The Atonement is the most central and sacred doctrine of the gospel of Jesus Christ. It is through the Atonement that we can be cleansed, healed, and strengthened.</p>
+            <p style="font-size: 24px;">The Atonement is one of the most important doctrine of the gospel of Jesus Christ. It is through the Atonement that we can be cleansed, healed, and forgiven. Throught the atonement we can find new strnegth and new life, and a new purpose in Christ.</p>
 
             <hr>
 
             <div class="section-block">
-                <h3>Quotes from Prophets</h3>
+                <h3>Our Prophets have said</h3>
                 <div class="content-pair">
                     <p>"The Atonement of Jesus Christ is the supreme expression of our Heavenly Father's love for us." — President Russell M. Nelson</p>
                 </div>
@@ -40,26 +40,29 @@
                 <h3>Scriptures about the Atonement</h3>
                 <div class="content-pair">
                     <p><strong>Isaiah 53:5</strong> — "He was wounded for our transgressions, he was bruised for our iniquities..."</p>
+                    <p>Explanation</p>
                 </div>
                 <div class="content-pair">
                     <p><strong>Alma 7:11–12</strong> — "And he shall go forth, suffering pains and afflictions and temptations of every kind..."</p>
+                    <p>Explanation</p>
                 </div>
                 <div class="content-pair">
-                    <p><strong>John 3:16</strong> — "For God so loved the world, that he gave his only begotten Son..."</p>
+                    <p><strong>Roman 8:38-39</strong> — "For I am persuaded, that neither death, nor life, nor angels, nor principalities, nor powers, nor things present, nor things to come, Nor height, nor depth, nor any other creature, shall be able to separate us from the love of God, which is in Christ Jesus our Lord."</p>
+                    <p>Nothing can separate us from Gods love. Nothing can keep us from the forgiveness that he offers to us. If we choose to follow him he will always forgive us and give us another chance. I love this scripture because it shows how powerful the love of God is and it helps me to feel the power of his atonement, and its ability to bring me to God despite my failings and shortcomings</p>
                 </div>
             </div>
 
             <hr>
 
             <div class="section-block">
-                <h3>My Personal Experience</h3>
+                <h3>Personal Experience</h3>
                 <p style="font-size: 24px;">In my own life, I have felt the power of the Atonement during times of deep struggle and repentance. The peace that comes from knowing I can be forgiven and strengthened is something I will always treasure.</p>
             </div>
         </section>
     </main>
 
     <footer>
-        <p>&copy; 2025 Matthew Clifford</p>
+        <p>&copy; 2025 Matthew Clifford  -  REL275C  -  Teachings of the Book of Mormon</p>
     </footer>
 </body>
 </html>
