--- a/putting_it_all_together1.html
+++ b/putting_it_all_together1.html
@@ -19,7 +19,7 @@
     <main>
         <section id="about">
             <h2 id="title">Understanding the Atonement of Jesus Christ</h2>
-            <p style="font-size: 24px;">The Atonement is one of the most important doctrine of the gospel of Jesus Christ. It is through the Atonement that we can be cleansed, healed, and forgiven. Throught the atonement we can find new strnegth and new life, and a new purpose in Christ.</p>
+            <p style="font-size: 24px;">The Atonement is one of the most important doctrine of the gospel of Jesus Christ. Through the Atonement that we can be cleansed, healed, and forgiven. Throught the atonement we can find new strength, new life, and new purpose in Christ.</p>
 
             <hr>
 
@@ -47,7 +47,9 @@
                     <p>Explanation</p>
                 </div>
                 <div class="content-pair">
-                    <p><strong>Roman 8:38-39</strong> — "For I am persuaded, that neither death, nor life, nor angels, nor principalities, nor powers, nor things present, nor things to come, Nor height, nor depth, nor any other creature, shall be able to separate us from the love of God, which is in Christ Jesus our Lord."</p>
+                    <p><strong>Roman 8:38-39</strong> — "For I am persuaded, that neither death, nor life, nor angels, nor principalities, nor powers, nor things present, nor things to come, Nor height, nor depth, nor any other creature, shall be able to separate us from the love of God, which is in Christ Jesus our Lord."
+                        
+                    Nothing can separate us from Gods love. Nothing can keep us from the forgiveness that he offers to us. If we choose to follow him he will always forgive us and give us another chance. I love this scripture because it shows how powerful the love of God is and it helps me to feel the power of his atonement, and its ability to bring me to God despite my failings and shortcomings</p>
                     <p>Nothing can separate us from Gods love. Nothing can keep us from the forgiveness that he offers to us. If we choose to follow him he will always forgive us and give us another chance. I love this scripture because it shows how powerful the love of God is and it helps me to feel the power of his atonement, and its ability to bring me to God despite my failings and shortcomings</p>
                 </div>
             </div>
