--- a/putting_it_all_together1.html
+++ b/putting_it_all_together1.html
@@ -26,12 +26,9 @@
             <div class="section-block">
                 <h3>Our Prophets have said</h3>
                 <div class="content-pair">
-                    <p>"The Atonement of Jesus Christ is the supreme expression of our Heavenly Father's love for us." — President Russell M. Nelson</p>
+                    <p>“However late you think you are, however many chances you think you have missed, however many mistakes you feel you have made … I testify that you have not traveled beyond the reach of divine love.” — Elder Jeffrey R. Holland (The Laborers in the Vineyard, April 2012)</p>
                 </div>
-                <div class="content-pair">
-                    <p>"Through the Atonement of Jesus Christ, all mankind may be saved, by obedience to the laws and ordinances of the Gospel." — Article of Faith #3</p>
-                </div>
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/Vok12BmljJk?si=Vnzux-Rki91ykJLb" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/Vok12BmljJk?start=540&end=600si=Vnzux-Rki91ykJLb" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             </div>
 
             <hr>
@@ -39,18 +36,24 @@
             <div class="section-block">
                 <h3>Scriptures about the Atonement</h3>
                 <div class="content-pair">
-                    <p><strong>Isaiah 53:5</strong> — "He was wounded for our transgressions, he was bruised for our iniquities..."</p>
-                    <p>Explanation</p>
+                    <p><strong>Isaiah 53:5</strong> — "He was wounded for our transgressions, he was bruised for our iniquities..."
+                    <br>
+                    <br>
+                    Explanation
+                    </p>
                 </div>
                 <div class="content-pair">
-                    <p><strong>Alma 7:11–12</strong> — "And he shall go forth, suffering pains and afflictions and temptations of every kind..."</p>
-                    <p>Explanation</p>
+                    <p><strong>Alma 7:11–12</strong> — "And he shall go forth, suffering pains and afflictions and temptations of every kind..."
+                    <br>
+                    <br>
+                    Explanation
+                    </p>
                 </div>
                 <div class="content-pair">
                     <p><strong>Roman 8:38-39</strong> — "For I am persuaded, that neither death, nor life, nor angels, nor principalities, nor powers, nor things present, nor things to come, Nor height, nor depth, nor any other creature, shall be able to separate us from the love of God, which is in Christ Jesus our Lord."
-                    <br> 
+                    <br>
+                    <br>
                     Nothing can separate us from Gods love. Nothing can keep us from the forgiveness that he offers to us. If we choose to follow him he will always forgive us and give us another chance. I love this scripture because it shows how powerful the love of God is and it helps me to feel the power of his atonement, and its ability to bring me to God despite my failings and shortcomings</p>
-                    <p>Nothing can separate us from Gods love. Nothing can keep us from the forgiveness that he offers to us. If we choose to follow him he will always forgive us and give us another chance. I love this scripture because it shows how powerful the love of God is and it helps me to feel the power of his atonement, and its ability to bring me to God despite my failings and shortcomings</p>
                 </div>
             </div>
 
