--- a/putting_it_all_together1.html
+++ b/putting_it_all_together1.html
@@ -28,7 +28,7 @@
                 <div class="content-pair">
                     <p>“However late you think you are, however many chances you think you have missed, however many mistakes you feel you have made … I testify that you have not traveled beyond the reach of divine love.” — Elder Jeffrey R. Holland (The Laborers in the Vineyard, April 2012)</p>
                 </div>
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/Vok12BmljJk?start=540&end=600si=Vnzux-Rki91ykJLb" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/Vok12BmljJk?start=540&end=616si=Vnzux-Rki91ykJLb" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             </div>
 
             <hr>
@@ -36,24 +36,24 @@
             <div class="section-block">
                 <h3>Scriptures about the Atonement</h3>
                 <div class="content-pair">
-                    <p><strong>Isaiah 53:5</strong> — "He was wounded for our transgressions, he was bruised for our iniquities..."
+                    <p><strong>2 Nephi 2:6-8</strong> — “Wherefore, redemption cometh in and through the Holy Messiah; for he is full of grace and truth. … No flesh can dwell in the presence of God, save it be through the merits, and mercy, and grace of the Holy Messiah…”
                     <br>
                     <br>
-                    Explanation
+                    Only through Christ's atonemnt can we receive redemption. Becuase of Jesus' sacrfice for us we have the opportunity and the provilige to be able to return to love with our Father in Heaven. This scripture is so powerful because it shows that we are redeemed through Christ, because of his mercy and grace.
                     </p>
                 </div>
                 <div class="content-pair">
-                    <p><strong>Alma 7:11–12</strong> — "And he shall go forth, suffering pains and afflictions and temptations of every kind..."
+                    <p><strong>Alma 7:11-13</strong> — “And he shall go forth, suffering pains and afflictions and temptations of every kind...that he may know according to the flesh how to succor his people...that he might take upon him the sins of his people, that he might blot out their transgressions according to the power of his deliverance.”
                     <br>
                     <br>
-                    Explanation
+                    Christ suffered all things for all of us. He chose to take upon himself the pains, afflictions, temptations, and struggles of every person who has lived, is living, and will live on this earth. He suffered so that he could know each of us individually and perfectly. He did this so that he could truly understand us and our struggles. He did this because he loves each one of us and wants us to be able to return and live with God again. 
                     </p>
                 </div>
                 <div class="content-pair">
                     <p><strong>Roman 8:38-39</strong> — "For I am persuaded, that neither death, nor life, nor angels, nor principalities, nor powers, nor things present, nor things to come, Nor height, nor depth, nor any other creature, shall be able to separate us from the love of God, which is in Christ Jesus our Lord."
                     <br>
                     <br>
-                    Nothing can separate us from Gods love. Nothing can keep us from the forgiveness that he offers to us. If we choose to follow him he will always forgive us and give us another chance. I love this scripture because it shows how powerful the love of God is and it helps me to feel the power of his atonement, and its ability to bring me to God despite my failings and shortcomings</p>
+                    Nothing can separate us from Gods love. Nothing can keep us from the forgiveness that he offers to us. If we choose to follow him he will always forgive us and give us another chance. I love this scripture because it shows how powerful the love of God is and it helps me to feel the power of his atonement, and its ability to bring me to God despite my failings and shortcomings.</p>
                 </div>
             </div>
 
@@ -61,7 +61,7 @@
 
             <div class="section-block">
                 <h3>Personal Experience</h3>
-                <p style="font-size: 24px;">In my own life, I have felt the power of the Atonement during times of deep struggle and repentance. The peace that comes from knowing I can be forgiven and strengthened is something I will always treasure.</p>
+                <p style="font-size: 24px;">In my life I have had my own hard struggles. At some points I felt as if I was completely alone, with no hope for forgiveness for the things I had done. At those times in my life, I didn't understand Christ's atonement. I didn't understand the power and healing that can come from truly embracing and accepting this atonemnt Christ has given us. Through prayer and lots of hard work I have come to better know my savior, to better know this wonderful gift that he has given to us. I love my savior and his sacrifice for me. I love this atonemnt, that gives the the oppotunity to repent every single day. I still make mistakes. I still struggle. But instead of cowering in fear and giving up I move forward, because I have my savior at my side, helping and guiding and loving every step of the way.</p>
             </div>
         </section>
     </main>
