--- a/putting_it_all_together1.html
+++ b/putting_it_all_together1.html
@@ -39,7 +39,7 @@
                     <p><strong>2 Nephi 2:6-8</strong> — “Wherefore, redemption cometh in and through the Holy Messiah; for he is full of grace and truth. … No flesh can dwell in the presence of God, save it be through the merits, and mercy, and grace of the Holy Messiah…”
                     <br>
                     <br>
-                    Only through Christ's atonemnt can we receive redemption. Becuase of Jesus' sacrfice for us we have the opportunity and the provilige to be able to return to love with our Father in Heaven. This scripture is so powerful because it shows that we are redeemed through Christ, because of his mercy and grace.
+                    Only through Christ's atonement can we receive redemption. Becuase of Jesus' sacrifice for us we have the opportunity and the privilige to be able to return to live with our Father in Heaven. Through the grace and mercy of Jesus Christ we can be forgiven of all our sins.
                     </p>
                 </div>
                 <div class="content-pair">
@@ -61,7 +61,7 @@
 
             <div class="section-block">
                 <h3>Personal Experience</h3>
-                <p style="font-size: 24px;">In my life I have had my own hard struggles. At some points I felt as if I was completely alone, with no hope for forgiveness for the things I had done. At those times in my life, I didn't understand Christ's atonement. I didn't understand the power and healing that can come from truly embracing and accepting this atonemnt Christ has given us. Through prayer and lots of hard work I have come to better know my savior, to better know this wonderful gift that he has given to us. I love my savior and his sacrifice for me. I love this atonemnt, that gives the the oppotunity to repent every single day. I still make mistakes. I still struggle. But instead of cowering in fear and giving up I move forward, because I have my savior at my side, helping and guiding and loving every step of the way.</p>
+                <p style="font-size: 24px;">In my life I have had my own hard struggles. At some points I felt as if I was completely alone, with no hope for forgiveness for the things I had done. At those times in my life, I didn't understand Christ's atonement. I didn't understand the power and healing that can come from truly embracing and accepting this atonement Christ has given us. Through prayer and lots of hard work I have come to better know my savior, to better know this wonderful gift that he has given to us. I love my savior and his sacrifice for me. I love this atonement, that gives me the the opportunity to repent every single day. I still make mistakes. I still struggle. But instead of cowering in fear and giving up, I move forward, because I have my savior at my side, helping and guiding and loving every step of the way.</p>
             </div>
         </section>
     </main>
