--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     </header>
     <nav id="navbar">
         <div class="flex-nav">
-            <div><a href="putting_it_all_together1.html">Putting it all together #1</a></div>
+            <div><a href="putting_it_all_together1.html">The Atonement</a></div>
             <!-- <div><a href="#putting_it_together">Putting it all together #2</a></div>
             <div><a href="#contact">Putting it all together #3</a></div> -->
         </div>
