--- a/putting_it_all_together1.html
+++ b/putting_it_all_together1.html
@@ -28,7 +28,7 @@
                 <div class="content-pair">
                     <p>“However late you think you are, however many chances you think you have missed, however many mistakes you feel you have made … I testify that you have not traveled beyond the reach of divine love.” — Elder Jeffrey R. Holland (The Laborers in the Vineyard, April 2012)</p>
                 </div>
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/Vok12BmljJk?start=540&end=616si=Vnzux-Rki91ykJLb" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/Vok12BmljJk?start=540&end=615" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             </div>
 
             <hr>
