--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <nav id="navbar">
         <div class="flex-nav">
             <div><a href="putting_it_all_together1.html">The Atonement</a></div>
-            <!-- <div><a href="#putting_it_together">Putting it all together #2</a></div>
-            <div><a href="#contact">Putting it all together #3</a></div> -->
+            <div><a href="putting_it_all_together2.html">The Doctrine of Christ: Repentance</a></div>
+            <!-- <div><a href="putting_it_all_together3.html">Missionary Work</a></div> -->
         </div>
     </nav>
     <main>
