new info for page 2

--- a/putting_it_all_together1.html
+++ b/putting_it_all_together1.html
@@ -19,7 +19,7 @@
     <main>
         <section id="about">
             <h2 id="title">Understanding the Atonement of Jesus Christ</h2>
-            <p style="font-size: 24px;">The Atonement is one of the most important doctrine of the gospel of Jesus Christ. Through the Atonement that we can be cleansed, healed, and forgiven. Throught the atonement we can find new strength, new life, and new purpose in Christ.</p>
+            <p style="font-size: 24px;">The Atonement is one of the most important doctrine of the gospel of Jesus Christ. Through the Atonement we can be cleansed, healed, and forgiven. Throught the atonement we can find new strength, new life, and new purpose in Christ.</p>
 
             <hr>
 
