--- a/putting_it_all_together2.html
+++ b/putting_it_all_together2.html
@@ -19,14 +19,18 @@
     <main>
         <section id="about">
             <h2 id="title">Understanding the Doctrine of Repentance</h2>
-            <p style="font-size: 24px;">Info here</p>
+            <p style="font-size: 24px;">The doctrine of repentance is a vital part of God's Plan for each of us. Only through repenting are we truly able to return to God's presence. God has given us the wonderful gift of repentance because he wants each of us to use it to return to live with him again.</p>
 
             <hr>
 
             <div class="section-block">
                 <h3>Our Prophets have said</h3>
                 <div class="content-pair">
-                    <p>"Quote"</p>
+                    <p>"The cleansing gift of repentance allows us to leave our sins behind and emerge a new creature." - Elder Dieter F. Uchtdorf
+                    <br>
+                    <br>
+                    "Repentance is not an event; it is a process. It is the key to happiness and peace of mind. When coupled with faith, repentance opens our access to the power of the Atonement of Jesus Christ." - President Russell M. Nelson (We can do better and be better, April 2019)
+                    </p>
                 </div>
                 <!-- Remove the below paragraph before turning in -->
                 <p>Insert new video here about repentance</p>
@@ -52,10 +56,10 @@
                     </p>
                 </div>
                 <div class="content-pair">
-                    <p><strong>Scripture 3</strong> — "scripture here"
+                    <p><strong>Moroni 6:8</strong> — "But as oft as they repented and sought forgiveness, with real intent, they were forgiven."
                     <br>
                     <br>
-                    Analysis of the scripture relating it to the doctrine of repentance.
+                    We can be forgiven every time that we make a mistake as long as we choose to repent with real intent and a sincere heart. God will give us as many second chances as we need to turn to him. He loves us and wants us to return to him.
                     </p>
                 </div>
             </div>
