--- a/putting_it_all_togther3.html
+++ b/putting_it_all_togther3.html
@@ -19,7 +19,7 @@
     <main>
         <section id="about">
             <h2 id="title">Understanding the Doctrine of Repentance</h2>
-            <p style="font-size: 24px;">Info here</p>
+            <p style="font-size: 24px;"></p>
 
             <hr>
 
