--- a/putting_it_all_together2.html
+++ b/putting_it_all_together2.html
@@ -32,9 +32,7 @@
                     "Repentance is not an event; it is a process. It is the key to happiness and peace of mind. When coupled with faith, repentance opens our access to the power of the Atonement of Jesus Christ." - President Russell M. Nelson (We can do better and be better, April 2019)
                     </p>
                 </div>
-                <!-- Remove the below paragraph before turning in -->
-                <p>Insert new video here about repentance</p>
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/Vok12BmljJk?start=540&end=615" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/SJQB33mPw_o?start=22&end=87" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             </div>
 
             <hr>
@@ -42,17 +40,17 @@
             <div class="section-block">
                 <h3>Scriptures about Repentance</h3>
                 <div class="content-pair">
-                    <p><strong>Scripture 1</strong> — "scripture here"
+                    <p><strong>3 Nephi 27:20</strong> — "Now this is the commandment: Repent, all ye ends of the earth, and come unto me and be baptized in my name, that ye may be sanctified by the reception of the Holy Ghost, that ye may stand spotless before me at the last day."
                     <br>
                     <br>
-                    Analysis of the scripture relating it to the doctrine of repentance.
+                    God has commanded us to repent and be batized. Through repentance and baptism we can be made clean but we have to start with repentance. When we repent we are able to gain better access to the power of the Holy Ghost to guide and comfort us. Through repentance we can be made spotless before God.
                     </p>
                 </div>
                 <div class="content-pair">
-                    <p><strong>Scripture 2</strong> — “scripture here”
+                    <p><strong>Alma 34:32</strong> — “For behold, this life is the time for men to prepare to meet God; yea, behold the day of this life is the day for men to perform their labors.”
                     <br>
                     <br>
-                    Analysis of the scripture relating it to the doctrine of repentance.
+                    Our time on this Earth is our chance to prepare ourselves to meet God. God has given us this life to learn, grow, and repent. We all will make mistakes but God knows that and gives us the opportunity to repent and learn from those mistakes. As we labor to follow Christ and repent daily we are preparing ourselves to live with God again. 
                     </p>
                 </div>
                 <div class="content-pair">
@@ -68,15 +66,17 @@
 
             <div class="section-block">
                 <h3>Personal Experience</h3>
-                <p style="font-size: 24px;">"Experiences here"</p>
+                <p style="font-size: 24px;">I love the gift of Repenance that God has given us. I have utilized it in my life countless times and I know that it is only through these opportunites to repent that I can </p>
             </div>
 
             <hr>
 
             <div class="section-block">
-                <h3>Church Messages on Repentace</h3>
-                <p>Put two mormon messages here about repentance</p>
-                <p style="font-size: 24px;"></p>
+                <h3>Additional videos</h3>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/yvrVP95BnUk?si=JNNYh7d3H0eZr-Xj" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                <br>
+                <br>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/J5GKlJfQq3k?si=QGHx7_Hu45p_CTD9" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             </div>
         </section>
     </main>
