final touches for #2

--- a/putting_it_all_together2.html
+++ b/putting_it_all_together2.html
@@ -66,7 +66,7 @@
 
             <div class="section-block">
                 <h3>Personal Experience</h3>
-                <p style="font-size: 24px;">I love the gift of Repenance that God has given us. I have utilized it in my life countless times and I know that it is only through these opportunites to repent that I can </p>
+                <p style="font-size: 24px;">I love this gift of Repentance that God has given us. I have utilized it in my life countless times and I know that it is only through these opportunites to repent that I can be clean before God. Daily repentance has brought me more joy and peace as I work towards becoming more like Christ. Through the power of repentance I can be free of the shame and guilt that comes from Satan and I can instead be filled with the power and assurance that I can become better as I put in effort and focus those efforts towards Christ.</p>
             </div>
 
             <hr>
