setting up for info on final page

--- a/putting_it_all_togther3.html
+++ b/putting_it_all_togther3.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1 style="text-align: center">Putting it all together #2 — The Doctrine of Christ: Repentance</h1>
+        <h1 style="text-align: center">Putting it all together #3 — "Topic"</h1>
     </header>
     <nav id="navbar">
         <div class="flex-nav">
@@ -18,7 +18,7 @@
 
     <main>
         <section id="about">
-            <h2 id="title">Understanding the Doctrine of Repentance</h2>
+            <h2 id="title">Understanding the Doctrine of "Topic"</h2>
             <p style="font-size: 24px;"></p>
 
             <hr>
@@ -29,7 +29,7 @@
                     <p>"Quote"</p>
                 </div>
                 <!-- Remove the below paragraph before turning in -->
-                <p>Insert new video here about repentance</p>
+                <p>Insert new video here about topic</p>
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/Vok12BmljJk?start=540&end=615" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             </div>
 
