--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="flex-nav">
             <div><a href="putting_it_all_together1.html">The Atonement</a></div>
             <div><a href="putting_it_all_together2.html">The Doctrine of Christ: Repentance</a></div>
-            <!-- <div><a href="putting_it_all_together3.html">Missionary Work</a></div> -->
+            <div><a href="putting_it_all_together3.html">Missionary Work</a></div>
         </div>
     </nav>
     <main>
