--- a/putting_it_all_togther3.html
+++ b/putting_it_all_togther3.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1 style="text-align: center">Putting it all together #3 — "Topic"</h1>
+        <h1 style="text-align: center">Putting it all together #3 — Missionary Work</h1>
     </header>
     <nav id="navbar">
         <div class="flex-nav">
