--- a/putting_it_all_together3.html
+++ b/putting_it_all_together3.html
@@ -18,7 +18,7 @@
 
     <main>
         <section id="about">
-            <h2 id="title">Understanding the Doctrine of "Topic"</h2>
+            <h2 id="title">Understanding the Doctrine of Missionary Work</h2>
             <p style="font-size: 24px;"></p>
 
             <hr>
