--- a/putting_it_all_together3.html
+++ b/putting_it_all_together3.html
@@ -19,7 +19,7 @@
     <main>
         <section id="about">
             <h2 id="title">Understanding the Doctrine of Missionary Work</h2>
-            <p style="font-size: 24px;"></p>
+            <p style="font-size: 24px;">Understanding the doctrine of missionary work means recognizing the importance of sharing the gospel and serving others in love. It involves a commitment to help others come unto Christ and experience the joy of the gospel in their lives.</p>
 
             <hr>
 
